Refactored mysql connector install.  Updated notes for Proctor